Introdução versão 1.0 fnalizada

--- a/abnt-uefs.bib
+++ b/abnt-uefs.bib
@@ -170,6 +170,14 @@
   owner = {Hugo},
   timestamp = {2009.11.08}
 }
+@article{Katz:Zege:esti:1994,
+author = {Katz, Joanne and Zeger, Scott L.},
+title = {Estimation of Design Effects in Cluster Surveys},
+year = {1994},
+journal = {Annals of Epidemiology},
+volume = {4},
+pages = {295–301}
+}
 
 @MISC{Wikibooks2009,
   author = {Wikibooks},
