Revisão das citações, e inicio da fundamentação teórica

--- a/abnt-uefs.bib
+++ b/abnt-uefs.bib
@@ -14,6 +14,15 @@
   urlaccessdate = {8 nov. 2011}
 }
 
+@inproceedings{singh2004reasoning,
+  title={Reasoning about molecular similarity and properties},
+  author={Singh, Rahul},
+  booktitle={Computational Systems Bioinformatics Conference, 2004. CSB 2004. Proceedings. 2004 IEEE},
+  pages={266--277},
+  year={2004},
+  organization={IEEE}
+}
+
 @MISC{BibTeX2009,
   author = {BibTeX},
   title = {Bib\TeX.org},
@@ -170,14 +179,6 @@
   owner = {Hugo},
   timestamp = {2009.11.08}
 }
-@article{Katz:Zege:esti:1994,
-author = {Katz, Joanne and Zeger, Scott L.},
-title = {Estimation of Design Effects in Cluster Surveys},
-year = {1994},
-journal = {Annals of Epidemiology},
-volume = {4},
-pages = {295–301}
-}
 
 @MISC{Wikibooks2009,
   author = {Wikibooks},
@@ -188,4 +189,65 @@ pages = {295–301}
   url = {http://en.wikibooks.org/wiki/LaTeX},
   urlaccessdate = {8 nov. 2011}
 }
+
+@Article{rodrigues2012,
+  title={Estrat{\'e}gias de Triagem Virtual no Planejamento de F{\'a}rmacos},
+  author={Rodrigues, Ricardo P and Mantoani, Susimaire P and de Almeida, Jonathan R and Pinsetta, Fl{\'a}vio Roberto and Semighini, Evandro P and da Silva, Vinicius B and da Silva, Carlos Henrique TP},
+  journal={Revista Virtual de Qu{\'\i}mica},
+  volume={4},
+  number={6},
+  pages={739--776},
+  year={2012}
+}
+@article{li2010pubchem,
+  title={PubChem as a public resource for drug discovery},
+  author={Li, Qingliang and Cheng, Tiejun and Wang, Yanli and Bryant, Stephen H},
+  journal={Drug discovery today},
+  volume={15},
+  number={23},
+  pages={1052--1057},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@book{kubinyi2008virtual,
+  title={Virtual screening for bioactive molecules},
+  author={Kubinyi, Hugo and Mannhold, Raimund and Timmerman, Hendrik and B{\"o}hm, Hans-Joachim and Schneider, Gisbert},
+  volume={10},
+  year={2008},
+  publisher={John Wiley \& Sons}
+}
+@article{pavlov2011indigo,
+  title={Indigo: universal cheminformatics API.},
+  author={Pavlov, Dmitry and Rybalkin, Mikhail and Karulin, Boris and Kozhevnikov, Mikhail and Savelyev, Alexey and Churinov, A},
+  journal={J. Cheminformatics},
+  volume={3},
+  number={S-1},
+  pages={4},
+  year={2011}
+}
+
+@article{irwin2005zinc,
+  title={ZINC-a free database of commercially available compounds for virtual screening},
+  author={Irwin, John J and Shoichet, Brian K},
+  journal={Journal of chemical information and modeling},
+  volume={45},
+  number={1},
+  pages={177--182},
+  year={2005},
+  publisher={ACS Publications}
+}
+
+@article{kumar2012,
+  title={Applications of Chemoinformatics in Drug Discovery
+: Substructure/Structure Search},
+  author={Kumar, Ajay},
+  journal={Asian Journal of Biochemical and Pharmaceutical Research},
+  volume={2},
+  number={4},
+  pages={135--143},
+  year={2012},
+  publisher={AJBPAD}
+}
+
 
