--- a/abnt-uefs.bib
+++ b/abnt-uefs.bib
@@ -33,6 +33,24 @@
   urlaccessdate = {8 nov. de 2011}
 }
 
+@article{mestres1997mimic,
+  title={MIMIC: A molecular-field matching program. Exploiting applicability of molecular similarity approaches},
+  author={Mestres, Jordi and Rohrer, Douglas C and Maggiora, Gerald M},
+  journal={Journal of Computational Chemistry},
+  volume={18},
+  number={7},
+  pages={934--954},
+  year={1997},
+  publisher={Wiley Online Library}
+}
+
+@book{devillers1996,
+  title={Neural networks in QSAR and drug design},
+  author={Devillers, James},
+  year={1996},
+  publisher={Academic Press}
+}
+
 @BOOK{Buerger1989,
   title = {\LaTeX\ for scientists and engineers},
   publisher = {McGraw-Hill},
@@ -227,6 +245,29 @@
   year={2011}
 }
 
+@book{todeschini2008handbook,
+  title={Handbook of Molecular Descriptors},
+  author={Todeschini, R. and Consonni, V. and Mannhold, R. and Kubinyi, H. and Timmerman, H.},
+  isbn={9783527613113},
+  series={Methods and Principles in Medicinal Chemistry},
+  url={https://books.google.com.br/books?id=PCXXdjUJiLoC},
+  urlaccessdate = {24 Nov. 2016},
+  year={2008},
+  publisher={Wiley}
+ 
+}
+
+
+@article{koes2011pharmer,
+  title={Pharmer: efficient and exact pharmacophore search},
+  author={Koes, David Ryan and Camacho, Carlos J},
+  journal={Journal of chemical information and modeling},
+  volume={51},
+  number={6},
+  pages={1307--1314},
+  year={2011},
+  publisher={ACS Publications}
+}
 @article{irwin2005zinc,
   title={ZINC-a free database of commercially available compounds for virtual screening},
   author={Irwin, John J and Shoichet, Brian K},
